--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Terrivial"
         tools:targetApi="31">
         <activity
+            android:name=".vista.Respondeme"
+            android:exported="false" />
+        <activity
             android:name=".vista.MainActivity2"
             android:exported="false" />
         <activity
