--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Terrivial"
         tools:targetApi="31">
+        <activity android:name=".vista.casino.Ahorcadito"
+            android:exported="false" />
         <activity android:name=".vista.casino.AdivinaNumero"
             android:exported="false" />
         <activity android:name=".vista.casino.JuegoView"
