--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Terrivial"
         tools:targetApi="31">
-        <activity android:name=".vista.casino.Ahorcadito"
+        <activity
+            android:name=".vista.casino.BattleshipGUI"
             android:exported="false" />
-        <activity android:name=".vista.casino.AdivinaNumero"
+        <activity
+            android:name=".vista.casino.Ahorcadito"
             android:exported="false" />
-        <activity android:name=".vista.casino.JuegoView"
-            android:exported="false"/>
+        <activity
+            android:name=".vista.casino.AdivinaNumero"
+            android:exported="false" />
+        <activity
+            android:name=".vista.casino.JuegoView"
+            android:exported="false" />
         <activity
             android:name=".vista.casino.Casino"
             android:exported="false" />
